after removing zip code

--- a/Day3Chromadb.ipynb
+++ b/Day3Chromadb.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPckOglOp5Nrne0Les+DLRA",
+      "authorship_tag": "ABX9TyNOnPpdXdUYp61YaH6VD12p",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -80,7 +80,7 @@
       "metadata": {
         "id": "1TlEQFkCy7-h"
       },
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -133,8 +133,17 @@
       "metadata": {
         "id": "R3Wi99NM0Xj9"
       },
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "adding a elements to the document, metadata and ids using for loop"
+      ],
+      "metadata": {
+        "id": "xvH4RDhq1iC5"
+      }
     },
     {
       "cell_type": "code",
@@ -156,7 +165,7 @@
       "metadata": {
         "id": "VmYhZHZA13TC"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -168,7 +177,7 @@
       "metadata": {
         "id": "OD9iMfh12Dmv"
       },
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -179,8 +188,17 @@
       "metadata": {
         "id": "m1PF9U2a2Qdh"
       },
-      "execution_count": 10,
+      "execution_count": 8,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Persistent CLient is used to configure chroma to save and load the db from the local"
+      ],
+      "metadata": {
+        "id": "eTp-WgrxFDfW"
+      }
     },
     {
       "cell_type": "code",
@@ -190,7 +208,7 @@
       "metadata": {
         "id": "if8_2_7c3kqd"
       },
-      "execution_count": 11,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -209,6 +227,17 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Create an collection using create_collection\n",
+        "if we want to retrive exsisting collection just get_collection and for delete, use delete_collection and we can use get_or_create_collection to get collection if it is exsist ro create new collection\n",
+        "Then useing add method add a value\n"
+      ],
+      "metadata": {
+        "id": "TitCwk8DFWKO"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "result = article_collection.query(\n",
@@ -219,7 +248,7 @@
       "metadata": {
         "id": "hQ2X4SIX4plJ"
       },
-      "execution_count": 13,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -256,7 +285,7 @@
       "metadata": {
         "id": "wB0vYAanGnyU"
       },
-      "execution_count": 29,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -274,7 +303,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Despite use defauld embedding model we use paraphrase-MiniLM-L3-v2"
+        "Despite use defauld embedding model(L6-v2) we use paraphrase-MiniLM-L3-v2"
       ],
       "metadata": {
         "id": "dGbQmnLXJZvz"
@@ -298,7 +327,7 @@
       "metadata": {
         "id": "lG29qW1LHtwj"
       },
-      "execution_count": 34,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -315,7 +344,7 @@
       "metadata": {
         "id": "Pfj2VcBgJWBL"
       },
-      "execution_count": 35,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -331,7 +360,7 @@
       "metadata": {
         "id": "ylI3nzVgKSIN"
       },
-      "execution_count": 39,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -364,9 +393,56 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "new_article_emb.count()"
+      ],
       "metadata": {
         "id": "4oTPgEeVMKma"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "count method used to return the number of items in the list and peek() method is used to retun the first 10 items"
+      ],
+      "metadata": {
+        "id": "L40oDoC8J8Og"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result_1 = new_article_emb.query(\n",
+        "    query_embeddings= [input_emb],\n",
+        "    n_results = 1,\n",
+        "    # where_document ={\"$contains\" : \"who requested\"}\n",
+        "    where = {\"Source\" : \"05-03-ai-powered-supply-chain-startup-pando-lands-30m-investment.txt\"}\n",
+        ")\n"
+      ],
+      "metadata": {
+        "id": "fql2ue3fyfVZ"
+      },
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "we can use where filter to filtered by metadata with associate each documents and where_document to filter by content in the doument."
+      ],
+      "metadata": {
+        "id": "98kpNcCkKMvn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result_1"
+      ],
+      "metadata": {
+        "id": "1WNpVPQizdif"
       },
       "execution_count": null,
       "outputs": []
