--- a/Langchian_with_Hugging_Face.ipynb
+++ b/Langchian_with_Hugging_Face.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN93hH098Ljx8Vx5BHkaKJl",
+      "authorship_tag": "ABX9TyO9yiSlE5D8JZwcKavc9CSH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "id": "pldllOkz21f7"
       },
       "outputs": [],
       "source": [
-        "!pip install langchain-huggingface"
+        "!pip install langchain-huggingface -q"
       ]
     },
     {
@@ -74,7 +74,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install mistral_inference\n"
+        "!pip install mistral_inference -q\n"
       ],
       "metadata": {
         "collapsed": true,
@@ -125,7 +125,7 @@
       "metadata": {
         "id": "kYDWb1iY-9jh"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -139,7 +139,7 @@
       "metadata": {
         "id": "kNWdeJMhJAS-"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -151,7 +151,7 @@
       "metadata": {
         "id": "1x1cvy14-_ib"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -221,22 +221,10 @@
         "print(prompt)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "zP3xJVeHDUGG",
-        "outputId": "5ca444a1-4f4b-4d23-8855-374f7818f5b9"
+        "id": "zP3xJVeHDUGG"
       },
-      "execution_count": 39,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "input_variables=['question'] input_types={} partial_variables={} template=\"Question: {question}\\n\\nAnswer: Let's think step by step.\"\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -255,33 +243,10 @@
         "print(response)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "tJDbDEWzSfMK",
-        "outputId": "9981f9a2-8610-45a8-b643-c18025418a2e"
+        "id": "tJDbDEWzSfMK"
       },
-      "execution_count": 40,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            " A fancy name for an Indian restaurant should be unique, catchy, and evoke a sense of sophistication and elegance. Here are some suggestions:\n",
-            "\n",
-            "1. \"Saffron Splendour\" - Saffron is a key ingredient in Indian cuisine and symbolizes royalty, luxury, and generosity.\n",
-            "2. \"Mystic Maharajah\" - Maharajah refers to an Indian ruler, suggesting a royal experience. \"Mystic\" adds a touch of mystery and intrigue.\n",
-            "3. \"Royal Rajah's Table\" - This name emphasizes the royal theme and \"table\" suggests a dining experience.\n",
-            "4. \"Spice Symphony\" - This name plays on the harmonious blend of spices in Indian cuisine and the musical term \"symphony.\"\n",
-            "5. \"Diamond Darbar\" - Darbar means \"court\" or \"palace\" in Hindi. Combining it with \"Diamond\" creates an elegant and luxurious image.\n",
-            "6. \"Gourmet Ghar\" - Ghar means \"home\" in Hindi, but Gourmet Ghar suggests a high-end, elegant dining experience.\n",
-            "7. \"Bollywood Banquet\" - Bollywood is famous for its glamour and extravagance, and \"banquet\" suggests a grand feast.\n",
-            "8. \"Taj Temptations\" - Taj is a famous Indian luxury hotel brand, evoking images of opulence and elegance.\n",
-            "9. \"Rasoi Royal\" - Rasoi means \"kitchen\" in Hindi, but \"Royal\" suggests a regal dining experience.\n",
-            "10. \"Curry Castle\" - This name plays on the popular dish \"curry\" and the idea of a castle, suggesting a grand and luxurious dining experience.\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -321,7 +286,7 @@
       "metadata": {
         "id": "6G63AQEEatX5"
       },
-      "execution_count": 14,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -360,19 +325,34 @@
       "metadata": {
         "id": "jK-okOv9gzVq"
       },
-      "execution_count": 16,
+      "execution_count": 15,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "HFP"
+        "HFP  ## model"
       ],
       "metadata": {
-        "id": "Y1Uou0PCh9D5"
+        "id": "Y1Uou0PCh9D5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d9135438-c551-48a7-e6f0-a389044ccce0"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "HuggingFacePipeline(pipeline=<transformers.pipelines.text_generation.TextGenerationPipeline object at 0x7d3dc94c8a30>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -385,29 +365,29 @@
           "height": 104
         },
         "id": "ybloRc02h-SF",
-        "outputId": "f82aac81-29f4-4fe1-cc1d-fa0497af5777"
+        "outputId": "ca747f25-017b-4c9d-f99b-af6cf3fb7ab5"
       },
-      "execution_count": 45,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "Setting `pad_token_id` to `eos_token_id`:None for open-end generation.\n"
+            "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'What is Machine Learning?\\n\\nMachine learning is a way to train objects to create, transform, and perform computations. Machine learning is useful when you want to improve the performance of specific algorithms, but it can add some weight depending on your needs to your project.\\n\\nThe benefits of machine learning are simple:\\n\\nBetter performance: Machine learning is an algorithm which learns to perform a task more quickly than the human would expect.\\n\\nBetter learning speed: The slower you learn, the faster you can accomplish'"
+              "\"What is Machine Learning?\\n\\nMachine learning is a tool for learning, which means that it doesn't require any programming skill. It lets you develop predictive models that can lead to better outcomes. While using Machine Learning is certainly a viable alternative to Artificial Intelligence as a general purpose software platform, it can be very time consuming and takes a lot of time as well. The primary goal of ML projects has been to help provide a robust, scalable, and extensible programming language for all applications in robotics, aerospace, and medical\""
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 45
+          "execution_count": 17
         }
       ]
     },
@@ -422,9 +402,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KmLMY6iPwl5E",
-        "outputId": "f335d69a-b76f-4774-a7c3-8596a6e1287d"
+        "outputId": "47306f88-f881-4fc4-ead7-4a4e2003ffb0"
       },
-      "execution_count": 29,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -448,10 +428,23 @@
         "  )"
       ],
       "metadata": {
-        "id": "_ryP_5GSiM1s"
+        "id": "_ryP_5GSiM1s",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "73007691-e8cc-4195-b2da-3715a87223da"
       },
-      "execution_count": 34,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/transformers/tokenization_utils_base.py:1601: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be depracted in transformers v4.45, and will be then set to `False` by default. For more details check this issue: https://github.com/huggingface/transformers/issues/31884\n",
+            "  warnings.warn(\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -464,24 +457,24 @@
       "metadata": {
         "id": "A3dBcjeoyNNn"
       },
-      "execution_count": 58,
+      "execution_count": 20,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "chain=prompt|gpu_llm"
+        "chain=prompt|gpu_llm #another way of creating LLM Chain"
       ],
       "metadata": {
         "id": "1OShToz8y5Mx"
       },
-      "execution_count": 50,
+      "execution_count": 21,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "question = \"What is Machine Learning\"\n",
+        "question = \"What is Artificial Intelligence\"\n",
         "chain.invoke({\"question\" : question})"
       ],
       "metadata": {
@@ -490,22 +483,22 @@
           "height": 87
         },
         "id": "dyOs4uiiy_wK",
-        "outputId": "d1a6d4df-fdcb-4623-ae9e-60f9a76d25ef"
+        "outputId": "3928ee7f-1b45-4ed2-fffa-42558c0e56ba"
       },
-      "execution_count": 60,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "\"Question: What is Machine Learning and what are the benefits?\\n\\nThe Machine Learning benefits are quite profound: you can use your model (such as neural networks or artificial intelligence) to understand data more easily, improve your learning curve, and be more efficient in solving problems much faster, all in the face of powerful, predictive AI that can even detect large numbers of clues.\\n\\nSo, Machine learning, as a tool, is pretty important, as a tool, it's the only tool that supports its own set of insights\""
+              "'Question : What is Artificial Intelligence?\\nThe core of Artificial Intelligence is called \"Artificial Intelligence\" or AI. This term refers to some of the techniques and concepts that we used to learn about Artificial Intelligence (AI).\\nArtificial Intelligence uses the techniques and concepts associated with robotics (Birds and dinosaurs), visual, acoustic and motion sensors, actuators, and other types of tools. Most recent innovations include quantum computer, distributed systems, deep learning, computer graphics, and artificial intelligence, which are all ways of helping create more'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 60
+          "execution_count": 24
         }
       ]
     },
